利用gorm实现数据库存储
