# gin/docs/swagger.json
@@ -9,7 +9,7 @@
     "host": "localhost:8080",
     "basePath": "/",
     "paths": {
-        "/addbook": {
+        "/book/add": {
             "post": {
                 "description": "添加一本新图书",
                 "consumes": [
@@ -49,7 +49,7 @@
                 }
             }
         },
-        "/deletebook/{id}": {
+        "/book/delete/{id}": {
             "delete": {
                 "description": "根据ID删除图书",
                 "consumes": [
@@ -87,7 +87,7 @@
                 }
             }
         },
-        "/searchbooks": {
+        "/book/search": {
             "get": {
                 "description": "获取所有图书信息",
                 "produces": [
@@ -107,7 +107,7 @@
                 }
             }
         },
-        "/updatebook/{id}": {
+        "/book/update/{id}": {
             "put": {
                 "description": "根据ID更新图书信息",
                 "consumes": [
@@ -164,6 +164,12 @@
     "definitions": {
         "main.Book": {
             "type": "object",
+            "required": [
+                "author",
+                "id",
+                "stock",
+                "title"
+            ],
             "properties": {
                 "author": {
                     "type": "string"
